--- a/ttr_frontend/src/app/bookmarks/bookmarks.component.css
+++ b/ttr_frontend/src/app/bookmarks/bookmarks.component.css
@@ -1,106 +1,13 @@
-.home_container{
+.profile_container{
+    padding-top: 1.5rem;
     width: 75rem;
     margin: auto;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 1.5rem;
-}
-.links_container{
-    width: 30rem;
-}
-.trends_container{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: white;
-    border-radius: 1rem;
-    height: fit-content;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    padding: 2rem;
-}
-.trends_container hr {
-    opacity: 70%;
-}
-.trends_title{
-    font-weight: 600;
-    font-size: 1rem;
-    opacity: 70%;
-}
-.trends_btn{
-    background-color: white;
-    border: none;
-    display: block;
-    width: 100%;
-    font-weight: 600;
-    opacity: 70%;
-    text-align: start;
-    transition: all .2s linear;
-}
-.trend_hashtag{
-    display: block;
-    margin-top: 1rem;
-    font-size: 1.05rem;
-}
-.trend_metadata{
-    font-size: .8rem;
-    opacity: 60%;
-    margin-top: .3rem;
-    display: block;
-}
-.trends_btn:hover{
-    color: rgb(8, 113, 233);
-}
-.whotofollow_container{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: white;
-    border-radius: 1rem;
-    height: fit-content;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    padding: 2rem;
-    margin-top: 1.5rem;
-}
-.whotofollow_title{
-    font-weight: 600;
-    font-size: 1rem;
-    opacity: 70%;
-}
-.whotofollow_profile{
-    margin-top: 1rem;
-}
-.whotofollow_profile_header{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-}
-.whotofollow_profile_img{
-    width: 2.5rem;
-    height: 2.5rem;
-    padding: 0rem;
-    display: block;
-    border-radius: 0.3rem;
-}
-.whotofollow_profile_text{
-    display: flex;
-    flex-direction: column;
 }
 .username{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 600;
     opacity: 80%;
     margin-right: 1rem;
-}
-.whotofollow_profile_metadata{
-    font-weight: 600;
-    opacity: 50%;
-    font-size: .8rem;
-    margin-top: .2rem;
-}
-.whotofollow_profile_desc_container{
-    text-align: justify;
-    font-size: 1.05rem;
-}
-.whotofollow_profile_desc{
-    opacity: 70%;
 }
 .follow_btn{
     padding-left: 1.3rem;
@@ -111,6 +18,7 @@
     background-color: rgb(8, 113, 233);
     border-radius: 0.3rem;
     color: white;
+    margin-left: 8rem;
     transition: all .2s linear;
     display: flex;
     align-items: center;
@@ -127,106 +35,43 @@
     min-width: 1.3rem;
     min-height: 1.3rem;
 }
-.whotofollow_profile_bg_img{
-    width: 100%;
-    border-radius: .5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-.timeline{
-    width: 45rem;
-    margin-right: 1.5rem;  
-}
-.tweet_something{
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: white;
-    border-radius: 1rem;
-    margin-bottom: 1.5rem;
-    padding: 1.5rem; 
-}
-.tweet_something_title{
-    font-weight: 600;
-    font-size: 1rem;
-    opacity: 70%;
-}
-.tweet_something_title hr {
-    opacity: 70%;
-}
-.tweet_something_input_container{
-    margin-top: 1rem;
-    display: flex;
-    margin-bottom: 1.5rem;
-}
-.tweet_something_input_img{
-    width: 2.5rem;
-    height: 2.5rem;
-    padding: 0rem;
-    display: block;
-    border-radius: 0.3rem;
-}
-.tweet_something_input_text{
-    margin-left: 1.5rem;
-    width: 100%;
-    border: none;
-    font-size: 1rem;
-    transition: all .2s linear;
-}
-.tweet_something_input_text:hover{
-    box-shadow: rgb(68, 67, 67) 0px 0px 0px 2px inset;
-    border-radius: 1px;
-}
-.tweet_something_footer{
+.profile_body{
     display: flex;
     justify-content: space-between;
 }
-.tweet_something_opts{
-    display: flex;
-}
-.tweet_something_img_file{
-    display: flex;
-    align-items: center;
-    font-size: 1.3rem;
-    border: none;
-    background-color: white;
-    transition: all .2s linear;
-    display: flex;
-    align-items: center;
-    margin-top: -.5px;
-}
-.tweet_something_img_file:hover{
-    color: rgb(8, 113, 233);
-}
-.tweet_something_who_can_reply{
-    margin-left: 1rem;
-    display: flex;
-    align-items: center;
-    border: none;
-    background-color: white;
-    background-color: white;
-    transition: all .2s linear;
-}
-.tweet_something_who_can_reply:hover{
-    color: rgb(8, 113, 233);
-}
-.tweet_something_who_can_reply mat-icon{
-    font-size: 1.3rem;
-    margin-top: .2rem;
-}
-.tweet_something_btn{
-    padding-left: 1.3rem;
-    padding-right: 1.5rem;
-    height: 2rem;
-    border: none;
+.filters_container{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    background-color: rgb(8, 113, 233);
-    border-radius: 0.3rem;
-    color: white;
-    transition: all .2s linear;
-    display: flex;
-    align-items: center;
+    background-color: white;
+    border-radius: 1rem;
+    height: fit-content;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    width: 30rem;
 }
-.tweet_something_btn:hover{
+.filters_btn{
+    background-color: white;
+    border: none;
+    display: block;
+    width: 100%;
+    height: 3rem;
+    font-weight: 600;
+    font-size: 1rem;
     opacity: 70%;
+    text-align: start;
+    padding-left: 2rem;
+    transition: all .2s linear;
+}
+.filters_btn:hover{
+    color: rgb(8, 113, 233);
+    box-shadow: 0.2rem 0rem 0rem rgb(8, 113, 233) inset;
+}
+.filters_btn_selected{
+    color: rgb(8, 113, 233);
+    box-shadow: 0.2rem 0rem 0rem rgb(8, 113, 233) inset;
+}
+.timeline{
+    width: 45rem;
+    margin-left: 1.5rem;
 }
 .retweet_flag{
     display: flex;
@@ -406,42 +251,23 @@
     .post_img{
         width: 39rem;
     }
-    .home_container{
+    .profile_container{
         width: 60rem;
     }
     .follow_btn{
         margin-left: 1rem;
     }
-    .whotofollow_container{
-        text-align: center;
-    }
-    .whotofollow_profile_text{
-        margin-top: .5rem;
-    }
-    .whotofollow_profile_header{
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-    .follow_btn{
-        min-width: 1rem;
-        margin-top: .5rem;
-        margin-left: 0px;
-    }
-    .whotofollow_profile_bg_img{
-        display: none;
-    }
 }
 
 @media only screen and (max-width: 60rem) {
     .timeline {
-        width: 25rem;
+        width: 30rem;
     }
-    .home_container{
+    .profile_container{
         width: 40rem;
     }
     .post_img{
-        width: 22rem;
+        width: 27rem;
     }
     .username{
         display: block;
@@ -450,22 +276,18 @@
 }
 
 @media only screen and (max-width: 45rem) {
-    .home_container{
+    .profile_container{
         width: 25rem;
     }
     .follow_btn{
         margin-top: 1rem;
     }
-    .home_container{
+    .profile_body{
         justify-content: flex-start;
         flex-direction: column;
     }
-    .links_container{
+    .filters_container{
         width: 100%;
-        margin-bottom: 1.5rem;
-    }
-    .whotofollow_profile_header{
-        flex-direction: column;
     }
     .timeline{
         width: 100%;
@@ -474,8 +296,5 @@
     }
     .post_img{
         width: 22rem;
-    }
-    .whotofollow_profile_bg_img{
-        display: block;
     }
 }
