--- a/ttr_frontend/src/app/app.component.css
+++ b/ttr_frontend/src/app/app.component.css
@@ -1,9 +1,11 @@
 .body{
     background-color: rgb(241, 240, 237);
     padding-bottom: 3rem;
+    min-height: calc(100% - 3.1rem);
 }
 @media only screen and (max-width: 45rem) {
     .body{
         padding-bottom: 0;
+        min-height: calc(100% - 3rem);
     }
 }
