--- a/ttr_frontend/src/app/bookmarks/bookmarks.component.html
+++ b/ttr_frontend/src/app/bookmarks/bookmarks.component.html
@@ -1,5 +1,5 @@
-<div class="profile_container">
-    <div class="profile_body">
+<div class="bookmarks_container">
+    <div class="bookmarks_body">
         <div class="filters_container">
             <button class="filters_btn filters_btn_selected">Tweets</button>
             <button class="filters_btn">Tweets & replies</button>
