--- a/ttr_frontend/src/app/footer/navbar/navbar.component.css
+++ b/ttr_frontend/src/app/footer/navbar/navbar.component.css
@@ -7,7 +7,7 @@
     text-align: center;
     display: none;
     z-index: 3;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
 }
