--- a/ttr_frontend/src/app/app.component.css
+++ b/ttr_frontend/src/app/app.component.css
@@ -9,3 +9,27 @@
         min-height: calc(100% - 3rem);
     }
 }
+
+button {
+cursor: pointer;
+}
+
+button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s;
+}
