--- a/ttr_frontend/src/app/header/navbar/navbar.component.css
+++ b/ttr_frontend/src/app/header/navbar/navbar.component.css
@@ -51,6 +51,14 @@
     display: flex;
     align-items: center;
     background: white;
+    transition: all .2s linear;
+    height: 3.2rem;
+    margin-top: .4rem;
+    border-radius: .5rem;
+}
+.profile_button:hover{
+    opacity: .8;
+    background-color: rgb(241, 240, 237);
 }
 .profile_button_img{
     width: 2.5rem;
@@ -66,6 +74,82 @@
 }
 .dropdown_icon{
     margin-left:.5rem;
+}
+.login_button{
+    border: none;
+    display: flex;
+    align-items: center;
+    background: white;
+    transition: all .2s linear;
+    height: 3.2rem;
+    margin-top: .4rem;
+    border-radius: .5rem;
+}
+.login_button:hover{
+    opacity: .8;
+    background-color: rgb(241, 240, 237);
+}
+.login_button span{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.login_button mat-icon{
+    margin-right:.5rem;
+}
+.profile_menu{
+    box-shadow: none;
+    position: absolute;
+    top: 5rem;
+    right: 5rem;
+    background-color: white;
+    z-index: 3;
+    width: 16rem;
+    display: flex;
+    flex-direction: column;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: .5rem;
+    border-radius: 1rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: opacity .2s linear;
+}
+.profile_menu button{
+    background-color: white;
+    border: none;
+    height: 3rem;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    opacity: 80%;
+    transition: all .2s linear;
+    display: flex;
+    padding-left: 2rem;
+    align-items: center;
+}
+.hr{
+    border: .1px solid black;
+    margin-bottom: 1rem;
+    opacity: .2;
+}
+.profile_menu button:hover{
+    background-color: rgb(241, 240, 237);
+}
+.profile_menu button mat-icon{
+    margin-right: .5rem;
+}
+.logout_btn{
+    color: red;
+}
+.hidden{
+    height: 0;
+    padding: 0;
+    opacity: 0;
+}
+.hidden button{
+    display: none;
+}
+.hidden .hr{
+    display: none;
 }
 @media only screen and (max-width: 45rem) {
     .nav_buttons_container{
