--- a/ttr_frontend/src/app/login-dialog/login-dialog.component.html
+++ b/ttr_frontend/src/app/login-dialog/login-dialog.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="signup_dialog_form_container" *ngIf="step == SIGNUP_SECOND_STEP">
             <div class="dialog_title_container"><span class="dialog_title">Sign Up</span></div>
-            <textarea class="dialog_text_input dialog_textarea_input" type="text" placeholder="Description"></textarea>
+            <textarea class="dialog_text_input dialog_textarea_input" type="text" placeholder="Biography "></textarea>
             <button type='button' (click)="goToSignUpThirdStep()"> Next </button>
         </div>
         <div class="signup_dialog_form_container" *ngIf="step == SIGNUP_THIRD_STEP">
