--- a/ttr_frontend/src/app/home/home.component.css
+++ b/ttr_frontend/src/app/home/home.component.css
@@ -234,6 +234,64 @@
     opacity: 70%;
     margin-bottom: .5rem;
 }
+.who_can_reply_menu_container{
+    box-shadow: none;
+    position: absolute;
+    top: 18rem;
+    left: 16%;
+    background-color: white;
+    z-index: 3;
+    width: 16rem;
+    display: flex;
+    flex-direction: column;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: .5rem;
+    border-radius: 1rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    transition: opacity .2s linear;
+}
+.who_can_reply_title{
+    font-weight: 600;
+    font-size: 1rem;
+    opacity: 80%;
+}
+.who_can_reply_text{
+    font-size: .95rem;
+    opacity: 60%;
+    margin-bottom: 1rem;
+}
+.who_can_reply_button{
+    margin-bottom: 1rem;
+    text-align: left;
+    font-size: .95rem;
+    display: flex;
+    align-items: center;
+    opacity: 80%;
+    background-color: white;
+    border: none;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    transition: all .2s linear;
+}
+.who_can_reply_button:hover{
+    background-color: rgb(241, 240, 237);
+}
+.who_can_reply_button mat-icon{
+    margin-right: .5rem;
+}
+.hidden{
+    height: 0;
+    padding: 0;
+    opacity: 0;
+}
+.hidden button{
+    display: none;
+}
+.hidden span{
+    display: none;
+}
 .post{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: white;
