--- a/ttr_frontend/src/app/profile/profile.component.css
+++ b/ttr_frontend/src/app/profile/profile.component.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 16rem;
     background-image: url("https://templates.iqonic.design/sofbox-admin/sofbox-dashboard-laravel/public/assets/images/page-img/profile-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 .profile_container{
     width: 75rem;
